--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     padding: 0;
-    margin: 13px;
+    margin: 0;
     font-family: "Ancizar Serif", serif;
   font-optical-sizing: auto;
   font-weight: weight;
@@ -19,18 +19,18 @@ img{
     
     }
 .card{
-    border: 1px solid#8f6565;
-        box-shadow: 10px 10px 10px 10px rgb(206 183 183);
-        border-radius: 30px;
-            padding: 24px;
-            width: 50%;
-            background-color: beige;
+    border: 2px solid #3939281f;
+    box-shadow: 4px 8px 21px #3131283b;
+    border-radius: 30px;
+    padding: 24px;
+    width: 50%;
+    background-color: beige;
 }
 button{
     /* background-color: green;
     height: 37px; */
       display: inline-block;
-  background-color: #7b38d8;
+  background-color: #5b26169e;;
   border-radius: 10px;
   border: 4px double #cccccc;
   color: #eeeeee;
@@ -60,27 +60,35 @@ button:hover {
     text-align: center;
     justify-content: center;
     height: 100px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .look{
-    border: 1px solid black;
     width: 290px;
     border-radius: 35px;
     text-align: center;
-    box-shadow: 10px 10px 10px 10px rgb(206 183 183);
+    border: 2px solid #3939281f;
+    box-shadow: 4px 8px 21px #3131283b;
 }
 #commentaires{
     display: flex;
     justify-content: space-around;
+    margin-top: 35px;
+    margin-bottom: 35px;
+
 }
 p{
     text-align: center;}
     h1{
-        border: 1px solid black;
+        /* border: 1px solid black; */
         text-align: center;
-         background-color: #7b38d8;
+         background-color: #5b26169e;
          color: #eeeeee;
     }
- 
+ iframe{
+    width: 100%;
+    margin: 0%;
+ }
 
 
 
