--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ img{
     box-shadow: 4px 8px 21px #3131283b;
     border-radius: 30px;
     padding: 24px;
-    width: 50%;
-    background-color: beige;
+    width: 20%;
+    background-color: #D6C5BA;
 }
 button{
     /* background-color: green;
     height: 37px; */
       display: inline-block;
-  background-color: #5b26169e;;
+  background-color:  #825E46;
   border-radius: 10px;
   border: 4px double #cccccc;
   color: #eeeeee;
@@ -40,7 +40,7 @@ button{
   width: 100%;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
+  /* margin: 5px; */
 }
 button:hover {
   background-color: #555;
@@ -56,7 +56,7 @@ button:hover {
 
    */
 .customer{
-    background-color: beige;
+    /* background-color: beige; */
     text-align: center;
     justify-content: center;
     height: 100px;
@@ -64,11 +64,13 @@ button:hover {
     margin-top: 20px;
 }
 .look{
-    width: 290px;
-    border-radius: 35px;
+    width: 300px;
+    /* border-radius: 0px; */
     text-align: center;
     border: 2px solid #3939281f;
     box-shadow: 4px 8px 21px #3131283b;
+    height: 200px;
+
 }
 #commentaires{
     display: flex;
@@ -78,19 +80,36 @@ button:hover {
 
 }
 p{
-    text-align: center;}
+    text-align: center;
+            font-size: large;
+}
     h1{
         /* border: 1px solid black; */
         text-align: center;
-         background-color: #5b26169e;
+         background-color:  #825E46;
          color: #eeeeee;
+             height: 170px;
+             font-size: xx-large;
     }
  iframe{
     width: 100%;
     margin: 0%;
  }
+img{
+        width: 80%;
+    border-radius: 30px;
+}
+div{
+    font-size: large;
+    /* background-color: #825E46; */
+    
 
-
+}
+.customer{
+    p{
+        color:#eeeeee ;
+    }
+}
 
 
 
